# AiR

./: .env.example  .gitignore  CLAUDE.md  README.md  air.spec  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
air/: __main__.py  air.py  target.py
air/agent/: __init__.py  code_reviewer.py
air/channel/: __init__.py  base.py  dingtalk.py
air/config/: __init__.py
air/data/: __init__.py  contacts.py  review_result.py
air/flows/code_review/: __init__.py  cli.py  contacts.py  dingtalk.py  result.py  reviewer.py
air/flows/code_review/prompts/: review_commits.md  review_diff.md
air/prompts/: __init__.py  review_commits.md  review_diff.md
air/shared/: __init__.py  config.py  prompts.py
air/source/: __init__.py  gitlab_source.py
docker/: Dockerfile  Dockerfile-dev
tests/: test_code_reviewer.py  test_config.py  test_dingtalk.py  test_review_result.py
