[project]
name = "air"
version = "0.1.0"
description = "AI Code Reviewer for CI/CD pipelines"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.2.85",
    "opentelemetry-api>=1.42.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[project.scripts]
air = "air.flows.code_review.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
